Refactor, start writing Swagger docs
