# internal/http_server/handlers/api_error_details.go
@@ -1,4 +1,0 @@
-package handlers
-
-const APIErrorDetailTransactionNotFound = "transaction not found"
-const APIErrorDetailTransactionDoesNotBelongToYou = "transaction does not belong to you"
